--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     background-image: url('bg3.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    overflow:hidden;
 
 }
 
